After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 627849 - commandline help glitch
commandline help glitch
Status: RESOLVED FIXED
Product: nautilus-sendto
Classification: Applications
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: nautilus-sendto-maint
nautilus-sendto-maint
Depends on:
Blocks:
 
 
Reported: 2010-08-24 16:53 UTC by Matthias Clasen
Modified: 2010-08-31 15:51 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (728 bytes, patch)
2010-08-24 16:53 UTC, Matthias Clasen
committed Details | Review

Description Matthias Clasen 2010-08-24 16:53:20 UTC
Created attachment 168654 [details] [review]
patch

nautilus-sendo --help says

Usage:
  nautilus-sendto [OPTION...] [FILES...] nautilus-sendto

The second 'nautilus-sendto' here is redundant and confusing. With the patch below, it says just

Usage:
  nautilus-sendto [OPTION...] [FILES...]

which is the intended output.