Fix command-line help glitch

nautilus-sendo --help says

Usage:
nautilus-sendto [OPTION...] [FILES...] nautilus-sendto

The second 'nautilus-sendto' here is redundant and confusing. With the
patch below, it says just

Usage:
nautilus-sendto [OPTION...] [FILES...]
which is the intended output

https://bugzilla.gnome.org/show_bug.cgi?id=627849